--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			<a class="menu-item" href="/home/"><span class="menu-item-text">Accueil</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="file:///C:/Users/7bamb/Desktop/site%20pharalane%20merje/a-propos.html"><span class="menu-item-text">À propos</span></a>
+			<a class="menu-item" href="/a-propos/"><span class="menu-item-text">À propos</span></a>
 			
 		</li><li>
 			<a class="menu-item" href="/services/"><span class="menu-item-text">Services</span></a>
@@ -155,7 +155,7 @@
 			<a class="menu-item" href="/demarche-promotionnel/"><span class="menu-item-text">Démarches promotionnelles</span></a>
 			
 		</li><li>
-			<a class="menu-item" href="C:\site pharalane merje\statistiques.html\"><span class="menu-item-text">Statistiques</span></a>
+			<a class="menu-item" href="/statistiques/"><span class="menu-item-text">Statistiques</span></a>
 			
 		</li><li>
 			<a class="menu-item" href="/faq/"><span class="menu-item-text">FAQ</span></a>
