--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 </div>
 			
 		</div><div class="mt-item cf">
-			<a class="mt-link" href="/bots/">
+			<a class="mt-link" href="/notre-equipe/">
 				<div class="b-img b-img-default b b-s cf wnd-orientation-square wnd-type-icon" style="" id="wnd_ImageBlock_345125362">
 	<div class="b-img-w">
 		<div class="b-img-c">
